--- a/kubernetes/deploy-aplicacao.yml
+++ b/kubernetes/deploy-aplicacao.yml
@@ -17,3 +17,19 @@ spec:
           image: ramimar/noticia-alura:v2
           ports:
           - containerPort: 80
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+   name: servico-aplicacao-noticia
+spec:
+  type: NodePort
+  ports:
+    - name: http
+      port: 80
+      nodePort: 31500
+  selector:
+    name: aplicacao-noticia-pod
+#   externalIPs:
+#     - 192.168.0.108
