--- a/kubernetes/deploy-aplicacao.yml
+++ b/kubernetes/deploy-aplicacao.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
    name: aplicacao-noticia-deployment
 spec:
-   replicas: 2
+#  replicas: 2
    selector: 
       matchLabels:
          name: aplicacao-noticia-pod
@@ -13,8 +13,13 @@ spec:
            name: aplicacao-noticia-pod
       spec:
         containers:
-        - name: container-aplicacao
+        - name: container-aplicacao-cpu
           image: ramimar/noticia-alura:v2
+          resources:
+            limits:
+              cpu: 500m
+            requests:
+              cpu: 300m
           ports:
           - containerPort: 80
 ---
@@ -33,3 +38,18 @@ spec:
     name: aplicacao-noticia-pod
 #   externalIPs:
 #     - 192.168.0.108
+---
+
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: aplicacao-noticia-deployment-autoscaling
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: aplicacao-noticia-deployment
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 20
+
